--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="#0" class="cd-close">Close</a>
             <ul class="cd-dropdown-content">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about-us.html" onclick="handleOutboundLinkClicks">About us</a></li>
+                <li><a href="about-us.html">About us</a></li>
                 <li><a href="our-car.html">Our Cars</a></li>
                 <li><a href="our-workshop.html">Service Centre</a></li>
                 <li><a href="our-promotion.html">Our Promotions</a></li>
@@ -612,7 +612,7 @@
                         <ul>
                             <li><a href="index.html"><img src="images/icon-car.png" alt="" /></a></li>
                             <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="about-us.html">About Us</a></li>
+                            <li><a href="about-us.html" onclick="handleOutboundLinkClicks">About Us</a></li>
                             <li><a href="our-car.html">Our Cars</a></li>
                             <li><a href="our-workshop.html">Service Centre</a></li>
                             <li><a href="our-promotion.html">Our Promotion</a></li>
