--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -760,58 +760,60 @@
 
     <!--- Footer -->
     <footer data-aos="fade-up">
-      <div class="footer-top">
+    <div class="footer-top">
         <div class="container">
-          <div class="row">
-            <div class="col-md-12 col-lg-4 footer-columns no-border">
-              <div class="footer-logo"><img src="images/logo.png" alt="" /></div>
-              <p>Since 2011, Zion Auto Gallery has been the preferred singapore car dealership of choice for new and
-                pre-owned cars.
+            <div class="row">
+                <div class="col-md-12 col-lg-4 footer-columns no-border">
+                    <div class="footer-logo"><img src="images/logo.png" alt="" /></div>
+                    <p>Since 2011, Zion Auto Gallery has been the preferred singapore car dealership of choice
+                        for new and
+                        pre-owned cars.
 
-                Our brand embodies our values – a genuine commitment to providing the best customer experience.</p>
-              <div class="footer-social"> <a href="https://www.instagram.com/zionautosg/" target="_blank"
-                  class="instagram"></a> <a href="https://www.facebook.com/zionauto" target="_blank"
-                  class="facebook"></a> </div>
+                        Our brand embodies our values – a genuine commitment to providing the best customer
+                        experience.</p>
+                    <div class="footer-social"> <a href="https://www.instagram.com/zionautosg/" target="_blank"
+                            class="instagram"></a> <a href="https://www.facebook.com/zionauto" target="_blank"
+                            class="facebook"></a> </div>
+                </div>
+                <div class="col-md-12 col-lg-8">
+                    <div class="row">
+                        <div class="col-md-4 footer-columns">
+                            <div class="footer-title">Our Cars</div>
+                            <div class="footer-nav">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="our-car.html">Our Cars</a></li>
+                                    <li><a href="our-promotion.html">Our Promotion</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4 footer-columns">
+                            <div class="footer-title">Information</div>
+                            <div class="footer-nav">
+                                <ul>
+                                    <li><a href="about-us.html">About Us</a></li>
+                                    <li><a href="our-workshop.html">Service Centre</a></li>
+                                    <li><a href="contact-us.html">Contact Us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4 footer-columns">
+                            <div class="footer-title">Information</div>
+                            <div class="footer-nav">
+                                <ul>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-12 col-lg-8">
-              <div class="row">
-                <div class="col-md-4 footer-columns">
-                  <div class="footer-title">Our Cars</div>
-                  <div class="footer-nav">
-                    <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="our-car.html">Our Cars</a></li>
-                      <li><a href="our-promotion.html">Our Promotion</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-md-4 footer-columns">
-                  <div class="footer-title">Information</div>
-                  <div class="footer-nav">
-                    <ul>
-                      <li><a href="about-us.html">About Us</a></li>
-                      <li><a href="our-workshop.html">Service Centre</a></li>
-                      <li><a href="contact-us.html">Contact Us</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-md-4 footer-columns">
-                  <div class="footer-title">Information</div>
-                  <div class="footer-nav">
-                    <ul>
-                      <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="footer-bottom">
+    </div>
+    <div class="footer-bottom">
         <div class="container">&copy; 2011 - 2021 Zion Auto Gallery Pte Ltd</div>
-      </div>
-    </footer>
+    </div>
+</footer>
     <!--- /Footer -->
 
   </div>
