--- a/html/our-promotion.html
+++ b/html/our-promotion.html
@@ -229,6 +229,7 @@
     <script src="js/jquery.menu-aim.js"></script>
     <script src="js/mobile-menu.js"></script>
     <script src="js/fancy-button.js"></script>
+    @@include('./templates/linkedIn.html')
 </body>
 
 </html>
