--- a/html/index.html
+++ b/html/index.html
@@ -1277,6 +1277,7 @@
     <script src="js/jquery.menu-aim.js"></script>
     <script src="js/app.js"></script>
     <script src="js/mobile-menu.js"></script>
+    @@include('./templates/linkedIn.html')
 </body>
 
 </html>
