--- a/our-car.html
+++ b/our-car.html
@@ -158,11 +158,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/gla200.html">GLA200<br>
+                                <li><a href="../../all-cars/gla200.html">GLA200<br>
                                         <span class="car-model-text">AMG-Line Premium Plus</span></a></li>
-                                <li><a href="all-cars/gla35.html">GLA35<br>
+                                <li><a href="../../all-cars/gla35.html">GLA35<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="all-cars/gla45-s.html">GLA45 S<br>
+                                <li><a href="../../all-cars/gla45-s.html">GLA45 S<br>
                                         <span class="car-model-text">4-Matic Plus</span></a></li>
                             </ul>
                         </li>
@@ -178,9 +178,9 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/glb200-7-seater.html">GLB200 7-Seater<br>
+                                <li><a href="../../all-cars/glb200-7-seater.html">GLB200 7-Seater<br>
                                         <span class="car-model-text">AMG Line Premium Plus</span></a></li>
-                                <li><a href="all-cars/glb35-7-seater.html">GLB35 7-Seater<br>
+                                <li><a href="../../all-cars/glb35-7-seater.html">GLB35 7-Seater<br>
                                         <span class="car-model-text">4-Matic Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -196,11 +196,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/glc300-suv.html">GLC300<br>
+                                <li><a href="../../all-cars/glc300-suv.html">GLC300<br>
                                         <span class="car-model-text">4-Matic AMG Line Premium Plus</span></a></li>
-                                <li><a href="all-cars/glc43-suv.html">GLC43<br>
+                                <li><a href="../../all-cars/glc43-suv.html">GLC43<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="all-cars/glc63.html">GLC63 S<br>
+                                <li><a href="../../all-cars/glc63.html">GLC63 S<br>
                                         <span class="car-model-text">4-Matic + Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -216,9 +216,9 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/gle450-7-seater.html">GLE450 7-Seater<br>
+                                <li><a href="../../all-cars/gle450-7-seater.html">GLE450 7-Seater<br>
                                         <span class="car-model-text">AMG Line Premium</span></a></li>
-                                <li><a href="all-cars/gle53-7-seater.html">GLE53 7-Seater<br>
+                                <li><a href="../../all-cars/gle53-7-seater.html">GLE53 7-Seater<br>
                                         <span class="car-model-text">4-Matic + Premium</span></a></li>
                             </ul>
                         </li>
@@ -248,15 +248,15 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/cla180.html">CLA180<br>
+                                <li><a href="../../all-cars/cla180.html">CLA180<br>
                                         <span class="car-model-text">AMG-Line</span></a></li>
-                                <li><a href="all-cars/cla200.html">CLA200<br>
+                                <li><a href="../../all-cars/cla200.html">CLA200<br>
                                         <span class="car-model-text">AMG-Line Premium Plus</span></a></li>
-                                <li><a href="all-cars/cla250.html">CLA250<br>
+                                <li><a href="../../all-cars/cla250.html">CLA250<br>
                                         <span class="car-model-text">AMG-Line</span></a></li>
-                                <li><a href="all-cars/cla35.html">CLA35<br>
+                                <li><a href="../../all-cars/cla35.html">CLA35<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="all-cars/cla45-s.html">CLA45 S<br>
+                                <li><a href="../../all-cars/cla45-s.html">CLA45 S<br>
                                         <span class="car-model-text">4-Matic + Plus</span></a></li>
                             </ul>
                         </li>
@@ -272,11 +272,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/glc300-coupe.html">GLC300<br>
+                                <li><a href="../../all-cars/glc300-coupe.html">GLC300<br>
                                         <span class="car-model-text">4-Matic AMG Line Premium Plus</span></a></li>
-                                <li><a href="all-cars/glc43-coupe.html">GLC43<br>
+                                <li><a href="../../all-cars/glc43-coupe.html">GLC43<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="all-cars/glc63.html">GLC63 S<br>
+                                <li><a href="../../all-cars/glc63.html">GLC63 S<br>
                                         <span class="car-model-text">4-Matic + Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -305,13 +305,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/s450-2021.html"><span style="color:red;">NEW</span> S450
+                                <li><a href="../../all-cars/s450-2021.html"><span style="color:red;">NEW</span> S450
                                         2021<br>
                                         <span class="car-model-text">Grand Edition (L)</span></a></li>
-                                <li><a href="all-cars/s500-2021.html"><span style="color:red;">NEW</span> S500
+                                <li><a href="../../all-cars/s500-2021.html"><span style="color:red;">NEW</span> S500
                                         2021<br>
                                         <span class="car-model-text">Grand Edition (L)</span></a></li>
-                                <li><a href="all-cars/s500l.html">S500L<br>
+                                <li><a href="../../all-cars/s500l.html">S500L<br>
                                         <span class="car-model-text">4-Matic AMG-Line Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -327,7 +327,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="all-cars/e200-2021.html"><span style="color:red;">NEW</span> E200
+                                <li><a href="../../all-cars/e200-2021.html"><span style="color:red;">NEW</span> E200
                                         2021<br>
                                         <span class="car-model-text">AMG-Line Premium</span></a></li>
                             </ul>
@@ -361,10 +361,10 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/porsche-macan.html">Porsche Macan <br><span class="car-model-text">S
+                        <li><a href="../../all-cars/porsche-macan.html">Porsche Macan <br><span class="car-model-text">S
                                     PDK
                                     3.0</span></span></a></li>
-                        <li><a href="all-cars/porsche-cayenne.html">Porsche Cayenne <br><span
+                        <li><a href="../../all-cars/porsche-cayenne.html">Porsche Cayenne <br><span
                                     class="car-model-text">3.0</span></span></a></li>
                     </ul>
                 </li>
@@ -380,9 +380,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/porsche-911.html">Porsche 911 <br><span class="car-model-text">Carrera
+                        <li><a href="../../all-cars/porsche-911.html">Porsche 911 <br><span class="car-model-text">Carrera
                                     4S</span></span></a></li>
-                        <li><a href="all-cars/porsche-cayenne-coupe.html">Porsche Cayenne<br><span
+                        <li><a href="../../all-cars/porsche-cayenne-coupe.html">Porsche Cayenne<br><span
                                     class="car-model-text">S
                                     2.9</span></span></a></li>
                     </ul>
@@ -399,7 +399,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/porsche-panamera.html">Porsche Panamera<br><span
+                        <li><a href="../../all-cars/porsche-panamera.html">Porsche Panamera<br><span
                                     class="car-model-text">4S PDK
                                     3.0</span></span></a></li>
                     </ul>
@@ -431,12 +431,12 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/bmw-320i.html">3-Series BMW <br><span class="car-model-text">320i
+                        <li><a href="../../all-cars/bmw-320i.html">3-Series BMW <br><span class="car-model-text">320i
                                     M-Sport</span></span></a></li>
-                        <li><a href="all-cars/bmw-520i.html">5-Series BMW <br><span class="car-model-text">520i
+                        <li><a href="../../all-cars/bmw-520i.html">5-Series BMW <br><span class="car-model-text">520i
                                     M-Sport
                                     Edition</span></span></a></li>
-                        <li><a href="all-cars/bmw-7-series.html">7-Series BMW <br><span class="car-model-text">740Li
+                        <li><a href="../../all-cars/bmw-7-series.html">7-Series BMW <br><span class="car-model-text">740Li
                                     M-Sport</span></span></a></li>
                     </ul>
                 </li>
@@ -452,7 +452,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/bmw-8-series.html">8-Series BMW <br><span class="car-model-text">840i
+                        <li><a href="../../all-cars/bmw-8-series.html">8-Series BMW <br><span class="car-model-text">840i
                                     sDrive
                                     M-Sport</span></span></a></li>
                     </ul>
@@ -484,7 +484,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/toyota-alphard.html">Toyota Alphard <br><span
+                        <li><a href="../../all-cars/toyota-alphard.html">Toyota Alphard <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
                     </ul>
                 </li>
@@ -500,7 +500,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/toyota-camry.html">Toyota Camry <br><span class="car-model-text">2.5
+                        <li><a href="../../all-cars/toyota-camry.html">Toyota Camry <br><span class="car-model-text">2.5
                                     Hybrid</span></span></a></li>
                     </ul>
                 </li>
@@ -531,9 +531,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="all-cars/honda-fit.html">Honda Fit <br><span
+                        <li><a href="../../all-cars/honda-fit.html">Honda Fit <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
-                        <li><a href="all-cars/honda-shuttle.html">Honda Shuttle <br><span
+                        <li><a href="../../all-cars/honda-shuttle.html">Honda Shuttle <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
                     </ul>
                 </li>
@@ -586,12 +586,12 @@
             <div class="navigation">
                 <ul>
                     <li><a href="index.html"><img src="images/icon-car.png" alt="" /></a></li>
-                    <li ><a href="index.html">Home</a></li>
-                    <li ><a href="about-us.html" onclick="handleOutboundLinkClicks">About Us</a></li>
-                    <li  class='active' ><a href="our-car.html">Our Cars</a></li>
-                    <li ><a href="our-workshop.html">Service Centre</a></li>
-                    <li ><a href="our-promotion.html">Our Promotion</a></li>
-                    <li ><a href="contact-us.html">Contact Us</a></li>
+                    <li ><a href="@@path./index.html">Home</a></li>
+                    <li ><a href="@@path./about-us.html" onclick="handleOutboundLinkClicks">About Us</a></li>
+                    <li  class='active' ><a href="@@path./our-car.html">Our Cars</a></li>
+                    <li ><a href="@@path./our-workshop.html">Service Centre</a></li>
+                    <li ><a href="@@path./our-promotion.html">Our Promotion</a></li>
+                    <li ><a href="@@path./contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="header-contact">Mon - Fri (10am - 7pm): <a href="tel: +65 6455 2535">+65 6455 2535</a>
