--- a/all-cars-templates/bmw-7-series.html
+++ b/all-cars-templates/bmw-7-series.html
@@ -18,18 +18,21 @@
   <!--- Mobile & Tablet Menu -->
   @@include('../html/templates/mobileMenu.html', {
   'page': 'cars',
+  'path': '.'
   })
   <!--- Mobile & Tablet Menu -->
 
   <!--- Car Menu -->
-  @@include('../html/templates/car-menu.html')
+  @@include('../html/templates/car-menu.html', {
+    'path': '.'
+  })
   <!--- /Car Menu -->
 
   <div id="wrapper">
 
     <!--- Header -->
     @@include('../html/templates/header.html', {
-    'page': 'cars',
+    'page': 'cars', 
     'path': '.'
     })
     <!--- /Header -->
