--- a/all-cars-templates/cla35.html
+++ b/all-cars-templates/cla35.html
@@ -19,11 +19,14 @@
   <!--- Mobile & Tablet Menu -->
   @@include('../html/templates/mobileMenu.html', {
   'page': 'cars',
+  'path': '.'
   })
   <!--- Mobile & Tablet Menu -->
 
   <!--- Car Menu -->
-  @@include('../html/templates/car-menu.html')
+  @@include('../html/templates/car-menu.html', {
+    'path': '.'
+  })
   <!--- /Car Menu -->
 
   <div id="wrapper">
@@ -31,6 +34,7 @@
     <!--- Header -->
     @@include('../html/templates/header.html', {
       'page': 'cars',
+      'path': '.'
       })
     <!--- /Header -->
 
