--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -18,11 +18,14 @@
     <!--- Mobile & Tablet Menu -->
     @@include('./templates/mobileMenu.html', {
     'page': 'contact',
+    'path': ''
     })
     <!--- Mobile & Tablet Menu -->
 
     <!--- Car Menu -->
-    @@include('./templates/car-menu.html')
+    @@include('./templates/car-menu.html', {
+        'path': '/all-cars'
+        })
     <!--- /Car Menu -->
 
     <div id="wrapper">
@@ -30,6 +33,7 @@
         <!--- Header -->
         @@include('./templates/header.html', {
         'page': 'contact',
+        'path': ''
         })
         <!--- /Header -->
 
