--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="msapplication-TileImage" content="images/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#000">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!-- Facebook Pixel Code -->
     <script>
@@ -157,11 +157,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/gla200.html">GLA200<br>
+                                <li><a href="./all-cars/gla200.html">GLA200<br>
                                         <span class="car-model-text">AMG-Line Premium Plus</span></a></li>
-                                <li><a href="/all-cars/gla35.html">GLA35<br>
+                                <li><a href="./all-cars/gla35.html">GLA35<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="/all-cars/gla45-s.html">GLA45 S<br>
+                                <li><a href="./all-cars/gla45-s.html">GLA45 S<br>
                                         <span class="car-model-text">4-Matic Plus</span></a></li>
                             </ul>
                         </li>
@@ -177,9 +177,9 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/glb200-7-seater.html">GLB200 7-Seater<br>
+                                <li><a href="./all-cars/glb200-7-seater.html">GLB200 7-Seater<br>
                                         <span class="car-model-text">AMG Line Premium Plus</span></a></li>
-                                <li><a href="/all-cars/glb35-7-seater.html">GLB35 7-Seater<br>
+                                <li><a href="./all-cars/glb35-7-seater.html">GLB35 7-Seater<br>
                                         <span class="car-model-text">4-Matic Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -195,11 +195,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/glc300-suv.html">GLC300<br>
+                                <li><a href="./all-cars/glc300-suv.html">GLC300<br>
                                         <span class="car-model-text">4-Matic AMG Line Premium Plus</span></a></li>
-                                <li><a href="/all-cars/glc43-suv.html">GLC43<br>
+                                <li><a href="./all-cars/glc43-suv.html">GLC43<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="/all-cars/glc63.html">GLC63 S<br>
+                                <li><a href="./all-cars/glc63.html">GLC63 S<br>
                                         <span class="car-model-text">4-Matic + Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -215,9 +215,9 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/gle450-7-seater.html">GLE450 7-Seater<br>
+                                <li><a href="./all-cars/gle450-7-seater.html">GLE450 7-Seater<br>
                                         <span class="car-model-text">AMG Line Premium</span></a></li>
-                                <li><a href="/all-cars/gle53-7-seater.html">GLE53 7-Seater<br>
+                                <li><a href="./all-cars/gle53-7-seater.html">GLE53 7-Seater<br>
                                         <span class="car-model-text">4-Matic + Premium</span></a></li>
                             </ul>
                         </li>
@@ -247,15 +247,15 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/cla180.html">CLA180<br>
+                                <li><a href="./all-cars/cla180.html">CLA180<br>
                                         <span class="car-model-text">AMG-Line</span></a></li>
-                                <li><a href="/all-cars/cla200.html">CLA200<br>
+                                <li><a href="./all-cars/cla200.html">CLA200<br>
                                         <span class="car-model-text">AMG-Line Premium Plus</span></a></li>
-                                <li><a href="/all-cars/cla250.html">CLA250<br>
+                                <li><a href="./all-cars/cla250.html">CLA250<br>
                                         <span class="car-model-text">AMG-Line</span></a></li>
-                                <li><a href="/all-cars/cla35.html">CLA35<br>
+                                <li><a href="./all-cars/cla35.html">CLA35<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="/all-cars/cla45-s.html">CLA45 S<br>
+                                <li><a href="./all-cars/cla45-s.html">CLA45 S<br>
                                         <span class="car-model-text">4-Matic + Plus</span></a></li>
                             </ul>
                         </li>
@@ -271,11 +271,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/glc300-coupe.html">GLC300<br>
+                                <li><a href="./all-cars/glc300-coupe.html">GLC300<br>
                                         <span class="car-model-text">4-Matic AMG Line Premium Plus</span></a></li>
-                                <li><a href="/all-cars/glc43-coupe.html">GLC43<br>
+                                <li><a href="./all-cars/glc43-coupe.html">GLC43<br>
                                         <span class="car-model-text">4-Matic</span></a></li>
-                                <li><a href="/all-cars/glc63.html">GLC63 S<br>
+                                <li><a href="./all-cars/glc63.html">GLC63 S<br>
                                         <span class="car-model-text">4-Matic + Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -304,13 +304,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/s450-2021.html"><span style="color:red;">NEW</span> S450
+                                <li><a href="./all-cars/s450-2021.html"><span style="color:red;">NEW</span> S450
                                         2021<br>
                                         <span class="car-model-text">Grand Edition (L)</span></a></li>
-                                <li><a href="/all-cars/s500-2021.html"><span style="color:red;">NEW</span> S500
+                                <li><a href="./all-cars/s500-2021.html"><span style="color:red;">NEW</span> S500
                                         2021<br>
                                         <span class="car-model-text">Grand Edition (L)</span></a></li>
-                                <li><a href="/all-cars/s500l.html">S500L<br>
+                                <li><a href="./all-cars/s500l.html">S500L<br>
                                         <span class="car-model-text">4-Matic AMG-Line Premium Plus</span></a></li>
                             </ul>
                         </li>
@@ -326,7 +326,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li><a href="/all-cars/e200-2021.html"><span style="color:red;">NEW</span> E200
+                                <li><a href="./all-cars/e200-2021.html"><span style="color:red;">NEW</span> E200
                                         2021<br>
                                         <span class="car-model-text">AMG-Line Premium</span></a></li>
                             </ul>
@@ -360,10 +360,10 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/porsche-macan.html">Porsche Macan <br><span class="car-model-text">S
+                        <li><a href="./all-cars/porsche-macan.html">Porsche Macan <br><span class="car-model-text">S
                                     PDK
                                     3.0</span></span></a></li>
-                        <li><a href="/all-cars/porsche-cayenne.html">Porsche Cayenne <br><span
+                        <li><a href="./all-cars/porsche-cayenne.html">Porsche Cayenne <br><span
                                     class="car-model-text">3.0</span></span></a></li>
                     </ul>
                 </li>
@@ -379,9 +379,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/porsche-911.html">Porsche 911 <br><span class="car-model-text">Carrera
+                        <li><a href="./all-cars/porsche-911.html">Porsche 911 <br><span class="car-model-text">Carrera
                                     4S</span></span></a></li>
-                        <li><a href="/all-cars/porsche-cayenne-coupe.html">Porsche Cayenne<br><span
+                        <li><a href="./all-cars/porsche-cayenne-coupe.html">Porsche Cayenne<br><span
                                     class="car-model-text">S
                                     2.9</span></span></a></li>
                     </ul>
@@ -398,7 +398,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/porsche-panamera.html">Porsche Panamera<br><span
+                        <li><a href="./all-cars/porsche-panamera.html">Porsche Panamera<br><span
                                     class="car-model-text">4S PDK
                                     3.0</span></span></a></li>
                     </ul>
@@ -430,12 +430,12 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/bmw-320i.html">3-Series BMW <br><span class="car-model-text">320i
+                        <li><a href="./all-cars/bmw-320i.html">3-Series BMW <br><span class="car-model-text">320i
                                     M-Sport</span></span></a></li>
-                        <li><a href="/all-cars/bmw-520i.html">5-Series BMW <br><span class="car-model-text">520i
+                        <li><a href="./all-cars/bmw-520i.html">5-Series BMW <br><span class="car-model-text">520i
                                     M-Sport
                                     Edition</span></span></a></li>
-                        <li><a href="/all-cars/bmw-7-series.html">7-Series BMW <br><span class="car-model-text">740Li
+                        <li><a href="./all-cars/bmw-7-series.html">7-Series BMW <br><span class="car-model-text">740Li
                                     M-Sport</span></span></a></li>
                     </ul>
                 </li>
@@ -451,7 +451,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/bmw-8-series.html">8-Series BMW <br><span class="car-model-text">840i
+                        <li><a href="./all-cars/bmw-8-series.html">8-Series BMW <br><span class="car-model-text">840i
                                     sDrive
                                     M-Sport</span></span></a></li>
                     </ul>
@@ -483,7 +483,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/toyota-alphard.html">Toyota Alphard <br><span
+                        <li><a href="./all-cars/toyota-alphard.html">Toyota Alphard <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
                     </ul>
                 </li>
@@ -499,7 +499,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/toyota-camry.html">Toyota Camry <br><span class="car-model-text">2.5
+                        <li><a href="./all-cars/toyota-camry.html">Toyota Camry <br><span class="car-model-text">2.5
                                     Hybrid</span></span></a></li>
                     </ul>
                 </li>
@@ -530,9 +530,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="/all-cars/honda-fit.html">Honda Fit <br><span
+                        <li><a href="./all-cars/honda-fit.html">Honda Fit <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
-                        <li><a href="/all-cars/honda-shuttle.html">Honda Shuttle <br><span
+                        <li><a href="./all-cars/honda-shuttle.html">Honda Shuttle <br><span
                                     class="car-model-text">Hatchback</span></span></a></li>
                     </ul>
                 </li>
@@ -560,7 +560,7 @@
     <header>
     <div class="header-top">
         <div class="container">
-            <div class="logo"><a href="index.html"><img src="images/logo-white.png" alt="" /></a></div>
+            <div class="logo"><a href="./index.html"><img src="./images/logo-white.png" alt="" /></a></div>
             <div class="header-top-right">
                 <div class="header-btn"><a href="contact-us.html" class="btn btn-primary">Book Appointment</a>
                 </div>
@@ -574,7 +574,7 @@
         <div class="mobile-car-btn">
             <button class="pushy-menu-btn"></button>
         </div>
-        <div class="mobile-logo"><a href="index.html"><img src="images/logo-icon.png" alt="" /></a></div>
+        <div class="mobile-logo"><a href="index.html"><img src="./images/logo-icon.png" alt="" /></a></div>
         <div class="menu-icon">
             <button class="cd-dropdown-trigger"></button>
         </div>
@@ -590,7 +590,7 @@
                             onclick="handleOutboundLinkClicks">About Us</a></li>
                     <li  data-item>
 
-                        <a class="navigation__link" data-link>Our Cars</a>
+                        <a class="navigation__link pushy-menu-btn">Our Cars</a>
 
                         <div class="dropdown dropdown--main" data-dropdown>
                             <div class="dropdown__wrapper dropdown__wrapper--1">
