--- a/all-cars-templates/bmw-320i.html
+++ b/all-cars-templates/bmw-320i.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'BMW 3-Series 320i M-Sport | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
