--- a/all-cars-templates/bmw-520i.html
+++ b/all-cars-templates/bmw-520i.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'BMW 5-Series 520i M-Sport Edition | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
