--- a/all-cars-templates/bmw-8-series.html
+++ b/all-cars-templates/bmw-8-series.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'BMW 8-Series 840i sDrive M-Sport | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
