--- a/all-cars-templates/glc43-suv.html
+++ b/all-cars-templates/glc43-suv.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz GLA43 SUV | Zion Auto Gallery',
+'path': '.'
 })
 
 
