--- a/all-cars-templates/honda-shuttle.html
+++ b/all-cars-templates/honda-shuttle.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Honda Shuttle | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
