--- a/all-cars-templates/porsche-cayenne-coupe.html
+++ b/all-cars-templates/porsche-cayenne-coupe.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Porsche Cayenne S 2.9 Coupe | Zion Auto Gallery',
+'path': '.'
 })
 
 
