--- a/all-cars-templates/porsche-macan.html
+++ b/all-cars-templates/porsche-macan.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Porsche Macan S PDK 3.0 | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
