--- a/all-cars-templates/s500l.html
+++ b/all-cars-templates/s500l.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz S500L 4-Matic | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
