--- a/html/about-us.html
+++ b/html/about-us.html
@@ -1,5 +1,6 @@
 @@include('./templates/head.html', {
 'title': 'About Us | Zion Auto Gallery Pte Ltd',
+'path': ''
 })
 
 <body>
@@ -16,15 +17,15 @@
 
   <!--- Mobile & Tablet Menu -->
   @@include('./templates/mobileMenu.html', {
-    'page': 'about',
-    'path': ''
-    })
+  'page': 'about',
+  'path': ''
+  })
   <!--- Mobile & Tablet Menu -->
 
   <!--- Car Menu -->
   @@include('./templates/car-menu.html', {
-    'path': '/all-cars'
-    })
+  'path': './all-cars'
+  })
   <!--- /Car Menu -->
 
   <div id="wrapper">
