--- a/html/our-car.html
+++ b/html/our-car.html
@@ -1,5 +1,6 @@
 @@include('./templates/head.html', {
 'title': 'Our Cars | Zion Auto Gallery Pte Ltd',
+'path': ''
 })
 
 <body>
@@ -24,7 +25,7 @@
 
     <!--- Car Menu -->
     @@include('./templates/car-menu.html', {
-        'path': '/all-cars'
+        'path': './all-cars'
         })
     <!--- /Car Menu -->
 
