--- a/all-cars-templates/cla45-s.html
+++ b/all-cars-templates/cla45-s.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz CLA45 S Coupe | Zion Auto Gallery',
+'path': '.'
 })
 
 
