--- a/all-cars-templates/e200-2021.html
+++ b/all-cars-templates/e200-2021.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz 2021 E200 AMG-Line Premium | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
