--- a/all-cars-templates/gla35.html
+++ b/all-cars-templates/gla35.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz GLA35 SUV | Zion Auto Gallery',
+'path': '.'
 })
 
 
