--- a/all-cars-templates/glc43-coupe.html
+++ b/all-cars-templates/glc43-coupe.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz GLC43 Coupe | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
