--- a/all-cars-templates/gle53-7-seater.html
+++ b/all-cars-templates/gle53-7-seater.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz GLE53 7-Seater | Zion Auto Gallery',
+'path': '.'
 })
 
 
