--- a/all-cars-templates/honda-fit.html
+++ b/all-cars-templates/honda-fit.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': '2020 Honda Fit 1.3A | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
