--- a/all-cars-templates/our-cars-details.html
+++ b/all-cars-templates/our-cars-details.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Zion Auto Gallery Pte Ltd',
+'path': '.'
 })
 
 <body>
