--- a/all-cars-templates/porsche-911.html
+++ b/all-cars-templates/porsche-911.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Porsche 911 Carrera 4S Coupe | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
