--- a/all-cars-templates/s500-2021.html
+++ b/all-cars-templates/s500-2021.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Mercedes-Benz 2021 S500L Grand Edition (L) | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
