--- a/all-cars-templates/toyota-camry.html
+++ b/all-cars-templates/toyota-camry.html
@@ -1,5 +1,6 @@
-@@include('../html/templates/cars-head.html', {
+@@include('../html/templates/head.html', {
 'title': 'Toyota Camry Ascent 2.5 Hybrid | Zion Auto Gallery',
+'path': '.'
 })
 
 <body>
