--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 @@include('./templates/head.html', {
 'title': 'Your Preferred Car Dealership | Zion Auto Gallery Pte Ltd',
+'path': ''
 })
 
 <body>
@@ -23,7 +24,7 @@
 
     <!--- Car Menu -->
     @@include('./templates/car-menu.html', {
-    'path': '/all-cars'
+    'path': './all-cars'
     })
     <!--- /Car Menu -->
 
